After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723563 - default plugin: Fix workspace switch type error
default plugin: Fix workspace switch type error
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-03 22:07 UTC by Jonas Ådahl
Modified: 2014-02-03 22:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
default plugin: Fix workspace switch type error (1.33 KB, patch)
2014-02-03 22:07 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2014-02-03 22:07:41 UTC
Signed-off-by: Jonas Ådahl <jadahl@gmail.com>
Comment 1 Jonas Ådahl 2014-02-03 22:07:43 UTC
Created attachment 268009 [details] [review]
default plugin: Fix workspace switch type error
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-02-03 22:20:23 UTC
Review of attachment 268009 [details] [review]:

Yes as well.
Comment 3 Jasper St. Pierre (not reading bugmail) 2014-02-03 22:33:10 UTC
Attachment 268009 [details] pushed as ce99362 - default plugin: Fix workspace switch type error